<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/dashboard" />

    <item
        android:id="@+id/sessionsFragment"
        android:icon="@drawable/ic_gamepad"
        android:title="@string/sessions" />

    <item
        android:id="@+id/inventoryFragment"
        android:icon="@drawable/ic_package"
        android:title="@string/inventory" />

    <item
        android:id="@+id/reportsFragment"
        android:icon="@drawable/ic_reports"
        android:title="@string/reports" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />

</menu>
