<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <AutoCompleteTextView
        android:id="@+id/actProductSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/inventory_search_product"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/inventory_sale_price"
        app:layout_constraintTop_toBottomOf="@id/actProductSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp" />

    <EditText
        android:id="@+id/etMinQty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/inventory_min_quantity"
        app:layout_constraintTop_toBottomOf="@id/etPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp" />

    <TextView
        android:id="@+id/tvCurrentAvailable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textSize="16sp"
        android:textColor="@color/text_primary"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/etMinQty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp" />

    <EditText
        android:id="@+id/etInitialQty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/inventory_quantity_to_add"
        app:layout_constraintTop_toBottomOf="@id/tvCurrentAvailable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inventory_save"
        app:layout_constraintTop_toBottomOf="@id/etInitialQty"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>