<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/spacing_large">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilInventoryProduct"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name"
        app:endIconMode="dropdown_menu">

        <AutoCompleteTextView
            android:id="@+id/actInventoryProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilProductPrice"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:hint="@string/product_price">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etProductPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:focusable="false"
            android:inputType="numberDecimal"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilAvailableQuantity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:hint="@string/available_quantity">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAvailableQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:focusable="false"
            android:inputType="number"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRequestedQuantity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:hint="@string/requested_quantity">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRequestedQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
